# betanumerics

./: .gitignore  Dockerfile  PRD.md  README.md  SpecStory.md  app.py  docker-compose.yml  pyproject.toml  test_app.py
.specstory/history/: 2025-07-09_02-05Z-generate-a-python-webapp-for-deployment.md
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html  view_identifier.html
